# LLSF-Learning-Label-Specific-Features-for-Multi-Label-Classifcation

./: .gitignore  LICENSE  LLSF.ipynb  MANIFEST.in  Makefile  README.md  emotions.mat  pyproject.toml  setup.py
examples/: basic_example.py
llsf/: __init__.py  llsf.py  version.py
tests/: __init__.py  test_llsf.py
